--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   },
 
   "scripts": {
-    "test": "npm install; gulp",
-
-    "start": "npm install; gulp"
+    "start": "npm install; ./node_modules/.bin/gulp --env production",
+    "test": "npm install; ./node_modules/.bin/gulp --env remotedev"
   },
   "repository": {
     "type": "git",
